--- a/src/components/TaskList/TaskList.module.css
+++ b/src/components/TaskList/TaskList.module.css
@@ -1,5 +1,7 @@
 .task-list {
     list-style: none;
-    padding: 0;
-    margin: 0;
+    padding: 10px;
+    margin: 25px 0 0 0;
+    border: silver solid 1px;
+    border-radius: 10px;
 }
